Fix spacing, change wording footer msg

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -3,6 +3,7 @@
   --regular: 400;
   --medium-bold: 500;
   --bold: 700;
+  --wrapper: 20px; // Main wrapper size
 }
 
 body {
