--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  padding: 32px 20px;
+  padding: 64px var(--wrapper);
   background: $black;
   color: $white;
 }
